--- a/NHIS-CloneProject/idnex.html
+++ b/NHIS-CloneProject/idnex.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="hero.css" />
     <link rel="stylesheet" href="news.css" />
     <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="footer.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -335,30 +336,188 @@
       </section>
       <section class="about">
         <div class="about__contents">
-          <h3></h3>
+          <h3>공단소개</h3>
           <figure>
-            <div class="">
-              <img
-                src="https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/main/img_about.png"
-                alt=""
-              />
-            </div>
+            <div class="profile__img"></div>
             <figcaption>
-              <h6>국민건강보험공단 이사장 정기석입니다.</h6>
-              <p>
-                국민건강보험공단 홈페이지를 찾아주신 여러분, 진심으로
-                환영합니다. <br />
-                ‘건강한 국민, 건강한 삶’이 실현되고 제도가 지속가능할 수 있도록
-                ‘소통과 배려’로 국민 여러분과 함께 하면서 최선을 다하겠습니다.
-              </p>
+              <a href="https://www.nhis.or.kr/nhis/about/wbhafa01000m01.do">
+                <h6>국민건강보험공단 이사장 정기석입니다.</h6>
+                <p>
+                  국민건강보험공단 홈페이지를 찾아주신 여러분, 진심으로
+                  환영합니다. <br />
+                  ‘건강한 국민, 건강한 삶’이 실현되고 제도가 지속가능할 수
+                  있도록 ‘소통과 배려’로 국민 여러분과 함께 하면서 최선을
+                  다하겠습니다.
+                </p>
+                <span>바로가기 →</span>
+              </a>
             </figcaption>
           </figure>
-          <div>
-            <article></article>
+          <div class="text__cardlist">
+            <a href="https://www.nhis.or.kr/announce/index.do" class="textcard">
+              <h6>경영공시</h6>
+              <p>
+                경영 투명성 확보 및 국민의 알권리<br />
+                충족을 위하여 중요 경영정보 공개
+              </p>
+              <span>자세히보기 →</span>
+            </a>
+            <a
+              href="https://www.nhis.or.kr/nhis/about/wbhafd01000m01.do"
+              class="textcard"
+            >
+              <h6>경영철학</h6>
+              <p>
+                건강사회 실현과 건강보험 지속가능<br />성을 보장하기 위해
+                윤리/인권, ESG<br />
+                경영 등 안내
+              </p>
+              <span>자세히보기 →</span>
+            </a>
+            <a
+              href="https://www.nhis.or.kr/nhis/together/wbhaec01000m01.do"
+              class="textcard"
+            >
+              <h6>정보공개청구</h6>
+              <p>
+                공단이 보유·관리하고 있는 정보 중<br />
+                국민이 필요한 정보를 공개 청구
+              </p>
+              <span>자세히보기 →</span>
+            </a>
+            <a
+              href="https://www.nhis.or.kr/nhis/together/retrieveOpenList.do"
+              class="textcard"
+            >
+              <h6>사전정보목록</h6>
+              <p>
+                공단이 보유·관리하고 있는 정보 중<br />
+                국민생활에 영향을 미치는 정보 등을<br />
+                사전에 공개
+              </p>
+              <span>자세히보기 →</span>
+            </a>
           </div>
-          <div></div>
+          <div class="list-slide">
+            <div class="img__cardlist">
+              <article class="imgcard">
+                <a
+                  href="https://www.nhis.or.kr/nhis/together/wbhaea02000m01.do"
+                >
+                  <div class="imgcard__album">
+                    <img
+                      src="https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/main/img_info_webzin.png"
+                      alt=""
+                    />
+                  </div>
+                  <div class="imgcard-text">
+                    <h6>건강보험 웹진</h6>
+                    <p>
+                      건강보험의 다양한 제도정책부터 올바른 건강정보까지 안내
+                    </p>
+                    <span>자세히보기 →</span>
+                  </div>
+                </a>
+              </article>
+              <article class="imgcard">
+                <a href="https://www.nhis.or.kr/nhis/etc/insertNewsInfoView.do">
+                  <div class="imgcard__album">
+                    <img
+                      src="https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/main/img_info_sosic.png"
+                      alt=""
+                    />
+                  </div>
+                  <div class="imgcard-text">
+                    <h6>소식지 신청/해지</h6>
+                    <p>
+                      최신 건강보험 제도 및 건강 정보를 이메일로 제공하는 서비스
+                    </p>
+                    <span>자세히보기 →</span>
+                  </div>
+                </a>
+              </article>
+              <article class="imgcard">
+                <a href="https://www.nhis.or.kr/nhis/about/wbhafb08200m01.do">
+                  <div class="imgcard__album">
+                    <img
+                      src="https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/main/img_info_issue.png"
+                      alt=""
+                    />
+                  </div>
+                  <div class="imgcard-text">
+                    <h6>건강보장 Issue&View</h6>
+                    <p>건강보험연구원의 학술활동, 해외 동향 소개</p>
+                    <span>자세히보기 →</span>
+                  </div>
+                </a>
+              </article>
+            </div>
+            <div class="slide">
+              <h5>홍보존</h5>
+              <div class="album">
+                <img
+                  src="https://www.nhis.or.kr/_res/nhis/nhis/img/banner/pr_20240429.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
+    <footer>
+      <section class="footer__inner">
+        <button>분야별 업무사이트 +</button>
+        <button>관련 사이트 +</button>
+      </section>
+      <section class="footer__main">
+        <div class="footer__contents">
+          <div>
+            <img
+              src="https://www.nhis.or.kr/_res/nhis/nhis/img/newimg/common/logo.png"
+              alt=""
+            />
+            <div>
+              <div>
+                <p>
+                  (26464) 강원특별자치도 원주시 건강로 32(반곡동)
+                  국민건강보험공단
+                </p>
+                <p>대표전화 1577-1000 (유료, 평일 09시~18시)</p>
+                <p>해외이용 +82-33-811-2001 (유료, 평일 09시~18시)</p>
+              </div>
+              <div>
+                <ul class="snslink">
+                  <li>
+                    <a class="naver" href="https://blog.naver.com/nhicblog"></a>
+                  </li>
+                  <li>
+                    <a
+                      class="facebook"
+                      href="https://www.facebook.com/nhis.korea"
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="kakao" href="https://story.kakao.com/ch/nhis"></a>
+                  </li>
+                  <li>
+                    <a
+                      class="youtube"
+                      href="https://www.youtube.com/user/nhicsns"
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      class="instagram"
+                      href="https://www.instagram.com/nhis_korea/"
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
